# SearchCouples

./: CMakeLists.txt  README.md
include/: tasks.h
src/: tasks.cpp
test/: test.cpp
